--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,2 @@
-NotEmpty.post.title=Title is required.
-NotNull.post.postedOn=Date is required.
-typeMismatch.post.postedOn=Format is in M/dd/yyyy hh:mm:ss a form.
+NotNull.dataEntry.gmtDateTime=Date is required.
+typeMismatch.dataEntry.gmtDateTime=Format is in MM/dd/yyyy hh:mm:ss form.
