--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,21 @@
 NotNull.dataEntry.gmtDateTime=Date is required.
 typeMismatch.dataEntry.gmtDateTime=Format is in MM/dd/yyyy hh:mm:ss form.
+typeMismatch.dataEntry.gpsLatitude=Requires to be a number.
+typeMismatch.dataEntry.gpsLongitude=Requires to be a number.
+typeMismatch.dataEntry.vocsLcPpm=Requires to be a number.
+typeMismatch.dataEntry.ms3LcPpm=Requires to be a number.
+typeMismatch.dataEntry.hydrogenSulfideLcPpm=Requires to be a number.
+typeMismatch.dataEntry.methaneLcPpm=Requires to be a number.
+typeMismatch.dataEntry.ms2LcPpm=Requires to be a number.
+typeMismatch.dataEntry.ammoniaLcPpm=Requires to be a number.
+typeMismatch.dataEntry.windSpeed=Requires to be a number.
+typeMismatch.dataEntry.windDirection=Requires to be a number.
+typeMismatch.dataEntry.dailyRain=Requires to be a number.
+typeMismatch.dataEntry.solarSensor=Requires to be a number.
+typeMismatch.dataEntry.uvSensor=Requires to be a number.
+typeMismatch.dataEntry.barometricPressure=Requires to be a number.
+typeMismatch.dataEntry.internalTemp=Requires to be a number.
+typeMismatch.dataEntry.internalHummidity=Requires to be a number.
+typeMismatch.dataEntry.externalTemp=Requires to be a number.
+typeMismatch.dataEntry.externalHumidity=Requires to be a number.
+typeMismatch.dataEntry.odourUnit=Requires to be a number.
